--- a/exp_numpy.ipynb
+++ b/exp_numpy.ipynb
@@ -400,22 +400,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([10, 16,  8,  3, 44])"
+       "3.141592653589793"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "numbers_array_1"
+    "numpy.pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([43, 65])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. \n",
+    "my_array_1 = numpy.array([20, 56])\n",
+    "my_array_2 = numpy.array([11, 78])\n",
+    "my_array_3 = numpy.array([43, 65])\n",
+    "\n",
+    "my_array_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 56, 11, 78, 43, 65])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Combine the arrays to a single array called diameters\n",
+    "diameters = numpy.concatenate([my_array_1, my_array_2, my_array_3])\n",
+    "diameters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Define a function (calc_circle) that calculates the size of a circle: (diameter / 2) ^ 2 * pi\n",
+    "def calc_circle(diameter):\n",
+    "    radius = diameter / 2\n",
+    "    size = radius ** 2 * numpy.pi\n",
+    "    return size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 314.15926536, 2463.00864041,   95.03317777, 4778.36242611,\n",
+       "       1452.20120412, 3318.30724035])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Create a new array sizes_circle based on the calc_circle function applied to the \n",
+    "# diameters that will contain the sizes of the circle based on the diameters in the diameters array.\n",
+    "\n",
+    "sizes_circle = []\n",
+    "\n",
+    "for diameter in diameters:\n",
+    "    size = calc_circle(diameter)\n",
+    "    sizes_circle.append(size)\n",
+    "\n",
+    "sizes_circle_array = numpy.array(sizes_circle)\n",
+    "sizes_circle_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2463.00864041, 4778.36242611, 3318.30724035])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5.  Filter the sizes_circle array for only values above the avarage value of the sizes_circle array.\n",
+    "average_size = numpy.mean(sizes_circle_array)\n",
+    "\n",
+    "sizes_circle_array[sizes_circle_array > average_size]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "            Num values         : 6\n",
+      "            Standard deviation : 1653.9397199782222\n",
+      "            Min value          : 95.03317777109125\n",
+      "            Max value          : 4778.362426110075\n",
+      "            Unique values      : [  95.03317777  314.15926536 1452.20120412 2463.00864041 3318.30724035\n",
+      " 4778.36242611]\n",
+      "            Num unique values  : 6\n",
+      "            \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Create a function that prints the following information from the sizes_circle array:\n",
+    "'''\n",
+    "- The number of values,\n",
+    "- standard deviation,\n",
+    "- min and max values\n",
+    "- the unique values\n",
+    "- the number of unique values\n",
+    "'''\n",
+    "\n",
+    "def display_info_array(input_array):\n",
+    "    num_values = input_array.size\n",
+    "    std_value = input_array.std()\n",
+    "    min_value = input_array.min()\n",
+    "    max_value = input_array.max()\n",
+    "    unique_values = numpy.unique(input_array)\n",
+    "    num_unique_values = unique_values.size\n",
+    "\n",
+    "    # print the values\n",
+    "    line = f\"\"\"\n",
+    "            Num values         : {num_values}\n",
+    "            Standard deviation : {std_value}\n",
+    "            Min value          : {min_value}\n",
+    "            Max value          : {max_value}\n",
+    "            Unique values      : {unique_values}\n",
+    "            Num unique values  : {num_unique_values}\n",
+    "            \"\"\"\n",
+    "    print(line)\n",
+    "\n",
+    "\n",
+    "display_info_array(sizes_circle_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 56, 11, 78, 43, 65])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Create a function, split_odd_even that accepts a numpy array and \n",
+    "# returns the odd and even numbers in two seperate arrays.\n",
+    "\n",
+    "def split_odd_even(input_array):\n",
+    "    odd_array = input_array[input_array % 2 == 1]\n",
+    "    even_array = input_array[input_array % 2 == 0]\n",
+    "\n",
+    "    return odd_array, even_array\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. Apply the split_odd_even function to both the diameters and sizes_circle arrays.\n",
+    "result_odd, result_even = split_odd_even(diameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 43, 65])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_odd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 56, 78])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([], dtype=float64), array([], dtype=float64))"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split_odd_even(sizes_circle_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 314.15926536, 2463.00864041,   95.03317777, 4778.36242611,\n",
+       "       1452.20120412, 3318.30724035])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sizes_circle_array"
    ]
   },
   {
